# iwallpaper

./: .editorconfig  .env  .env.example  .gitignore  .lintstagedrc.json  README.md  components.json  middleware.ts  next.config.js  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  uno.config.ts
.github/workflows/: cron.yaml  scrape-wallpapers.yaml  scrape.yaml
_src/: app.tsx  main.tsx
_src/components/: button.tsx  masonry.tsx
_src/contexts/: theme.tsx
_src/hooks/: use-click-outside.ts  use-infinite-scroll.ts  use-title.ts
_src/layouts/: app.tsx  root.tsx
_src/pages/: home.tsx
_src/utils/: fetcher.ts  supabase.ts
algorithms/: .env.example  .gitignore  pyproject.toml
algorithms/src/: env.py  plot.py  recommender.py  supabase.py
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.txt
app/(no-framework)/: layout.tsx
app/(with-framework)/: actions.ts  layout.tsx  masonry.tsx  mock-wallpapers.json  page.tsx
app/api/: utils.ts
app/auth/: context.tsx  guards.tsx
app/components/: button.tsx  input.tsx
app/sidebar/: account.tsx  logo.tsx  nav-link.tsx  navigation.tsx  sidebar.tsx  sign-in.tsx  theme-toggler.tsx  user.tsx
app/sign-in/: form.tsx  page.tsx
app/supabase/: client.ts  server.ts  types.ts
app/theme/: context.tsx  initializer.tsx
app/utils/: blur.ts  case.ts  env.ts  storage.ts  types.ts
backend/: .env  app.py  pyproject.toml
backend/models/: vectorizer.joblib
backend/src/: constants.py  embedding.py  env.py  gte.py  recommender.py  root.py  scraper.py  searcher.py  supabase.py  tagger.py  transformer.py  vectorizer.py
components/header/: actions.ts  (+6 more)
database/: seed.sql
frontend/: .eslintrc.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  unocss.config.ts  vite.config.ts
hooks/: use-error-toast.tsx
middlewares/: update-session.ts
supabase/: config.toml  index.sql  seed.sql
utils/: case.ts  types.ts
(+214 files in other folders)
