[tool.poetry]
name = "iwallpaper"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiodns = "^3.2.0"
aiohttp = "^3.9.5"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
seaborn = "^0.13.2"
sentence-transformers = "^2.7.0"
supabase = "^2.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
