[tool.poetry]
name = "iwallpaper"
version = "0.0.0"
description = "Wallpaper exploring platform."
authors = ["Yuwang Cai <mrcaidev@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiodns = "^3.2.0"
aiohttp = "^3.9.3"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
python-dotenv = "^1.0.1"
sentence-transformers = "^2.6.1"
supabase = "^2.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
